test_output.txt

BSTTests.hs:59:20: error: [GHC-88464]
    Variable not in scope:
      remove :: t0 -> BST Int String -> BST key8 a0
   |
59 |         (lookup 1 (remove 1 (empty :: BST Int String))))
   |                    ^^^^^^
